--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
     "express": "^4.18.2",
     "socket.io": "^4.7.5",
-    "sqlite3": "^5.1.7"
+    "cors": "^2.8.5",
+    "bcryptjs": "^2.4.3"
   },
   "engines": {
     "node": ">=14.0.0"
