--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Epic Messenger - Real-time chat application",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -13,5 +14,8 @@
   },
   "engines": {
     "node": ">=14.0.0"
-  }
+  },
+  "keywords": ["chat", "messenger", "real-time", "socket.io"],
+  "author": "BayRex",
+  "license": "MIT"
 }
