--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
   "name": "epic-messenger",
-  "version": "1.0.0",
-  "description": "Epic Messenger - Real-time chat application",
+  "version": "2.0.0",
+  "description": "Epic Messenger - современный мессенджер с сохранением данных",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.7.5",
+    "socket.io": "^4.7.2",
     "cors": "^2.8.5"
   },
-  "engines": {
-    "node": ">=14.0.0"
-  },
-  "keywords": ["chat", "messenger", "real-time", "socket.io"],
+  "keywords": [
+    "messenger",
+    "chat",
+    "real-time",
+    "epic"
+  ],
   "author": "BayRex",
   "license": "MIT"
 }
