--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
   "name": "epic-messenger",
   "version": "2.0.0",
-  "description": "Epic Messenger - современный мессенджер с сохранением данных",
+  "description": "Epic Messenger - современный мессенджер",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
     "cors": "^2.8.5"
   },
-  "keywords": [
-    "messenger",
-    "chat",
-    "real-time",
-    "epic"
-  ],
+  "keywords": ["messenger", "chat", "real-time"],
   "author": "BayRex",
   "license": "MIT"
 }
