--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "epic-messenger",
   "version": "2.0.0",
-  "description": "Epic Messenger - современный мессенджер",
+  "description": "Epic Messenger with SQLite database",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "sqlite3": "^5.1.6"
   },
-  "keywords": ["messenger", "chat", "real-time"],
-  "author": "BayRex",
-  "license": "MIT"
+  "engines": {
+    "node": ">=14.0.0"
+  }
 }
