--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
   "name": "epic-messenger",
   "version": "2.0.0",
-  "description": "Epic Messenger with SQLite database",
+  "description": "Epic Messenger with JSON storage",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "cors": "^2.8.5",
-    "sqlite3": "^5.1.6"
+    "socket.io": "^4.7.2"
   },
   "engines": {
     "node": ">=14.0.0"
