--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "epic-messenger",
-  "version": "2.0.0",
-  "description": "Epic Messenger with JSON storage",
+  "version": "1.0.0",
+  "description": "Epic Messenger - современный мессенджер с подарками и социальными функциями",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -12,5 +13,13 @@
   },
   "engines": {
     "node": ">=14.0.0"
-  }
+  },
+  "keywords": [
+    "messenger",
+    "chat",
+    "real-time",
+    "socket.io"
+  ],
+  "author": "BayRex",
+  "license": "MIT"
 }
