--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "install-deps": "npm install express pg socket.io express-session"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.7.5",
     "pg": "^8.11.3",
-    "multer": "^1.4.5-lts.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
-    "path": "^0.12.7",
-    "fs": "0.0.1-security"
+    "socket.io": "^4.7.5",
+    "express-session": "^1.18.0"
   },
-  "keywords": ["messenger", "chat", "real-time"],
+  "keywords": [
+    "messenger",
+    "chat",
+    "real-time"
+  ],
   "author": "Epic Messenger Team",
   "license": "MIT"
 }
