--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
   "name": "epic-messenger",
-  "version": "1.0.0",
-  "description": "Modern messaging platform",
+  "version": "2.0.0",
+  "description": "Modern real-time messenger with beautiful interface",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.5",
     "pg": "^8.11.3",
+    "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
-    "path": "^0.12.7",
-    "fs": "0.0.1-security"
+    "path": "^0.12.7"
   },
-  "keywords": ["messenger", "chat", "real-time"],
+  "keywords": [
+    "messenger",
+    "chat",
+    "real-time",
+    "postgresql",
+    "socketio"
+  ],
   "author": "Epic Messenger Team",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=14.0.0"
+  }
 }
