--- a/public/package.json
+++ b/public/package.json
@@ -1,17 +1,12 @@
 {
   "name": "epic-messenger",
   "version": "2.0.0",
-  "description": "Epic Messenger Application",
+  "description": "Epic Messenger - Modern Chat Application",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
-  "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
