--- a/package.json
+++ b/package.json
@@ -9,21 +9,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.5",
-    "pg": "^8.11.3",
-    "express-session": "^1.17.3",
-    "multer": "^1.4.5-lts.1",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "path": "^0.12.7"
+    "busboy": "^1.6.0"
   },
   "keywords": [
     "messenger",
     "chat",
     "real-time",
-    "postgresql",
-    "socketio"
+    "websocket"
   ],
   "author": "Epic Messenger Team",
   "license": "MIT",
