--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "epic-messenger",
-  "version": "2.0.0",
-  "description": "Modern real-time messenger with beautiful interface",
+  "version": "1.0.0",
+  "description": "Modern messenger with cross-platform support",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node server.js"
   },
   "dependencies": {
     "busboy": "^1.6.0"
