--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
   "name": "epic-messenger",
   "version": "1.0.0",
-  "description": "Modern messenger with cross-platform support",
+  "description": "Epic Messenger - социальная сеть с E-COIN системой",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js"
-  },
-  "dependencies": {
-    "busboy": "^1.6.0"
+    "dev": "nodemon server.js",
+    "build": "echo 'No build step required'",
+    "install-deps": "npm install"
   },
   "keywords": [
     "messenger",
+    "social",
     "chat",
-    "real-time",
-    "websocket"
+    "posts",
+    "e-coin"
   ],
-  "author": "Epic Messenger Team",
+  "author": "Your Name",
   "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1"
+  },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   }
 }
