--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "posts",
     "e-coin"
   ],
-  "author": "Your Name",
+  "author": "BayRex",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3",
+    "busboy": "^1.6.0"
   },
   "engines": {
     "node": ">=18.0.0"
